2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/abswordseg.cpp (AbsWordSeg::InitData):
	  - Make variable definition more concise.
	  - Drop unnecessary loop condition.

2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/abswordseg.h, src/abswordseg.cpp (class AbsWordSeg):
	  - Make LinkSep, IdxSep members array instead of pointer to allocated
	    memory.
	  - Drop unused methods IsNumber(), IsEnglish().
	* src/abswordseg.cpp (AbsWordSeg::CreateWordList):
	  - Remove unused vars Buff, data_idx.
	  - Move variable definitions to where they're used.

2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Print "Output:" title before blank line.

	* src/wordseg.cpp (main):
	  - [plain text] Previous commit introduced title-less output
	    for blank line. Reorder the steps it to fix.

2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (main):
	  - Replace fgetc() loop with fgets().
	  - [plain text] Also print a blank line in response to blank input.

2012-06-28  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (main):
	  - Move some vars into code block where they're used.
	  - Fix var name spelling 'thaifag' -> 'thaiFlag'.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp (SplitToken):
	  - Drop unused var 'i'.
	  - Rearrange loop condition and make assignments concise.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Source clean up.

	* src/wordseg.cpp:
	  - Drop myisspace() and just use libc isspace().
	  - Drop unused functions RemoveJunkChars() and IsValidChar().

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Make RTFToken methods inline.

	* src/filterrtf.cpp (RTFToken):
	  - Make methods inline functions.

2012-06-27  Theppitak Karoonboonyanan  <thep@linux.thai.net>
